--- a/spzx-service/service-product/src/main/resources/application-dev.yml
+++ b/spzx-service/service-product/src/main/resources/application-dev.yml
@@ -15,6 +15,11 @@ spring:
     url: jdbc:mysql://54.225.96.210:3306/db_spzx?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: 1234
+  # Redis的相关配置
+  data:
+    redis:
+      host: 54.225.96.210 #TODO
+      port: 6379
 
 mybatis:
   config-location: classpath:mybatis-config.xml
